--- a/src/templates/clientes/create.html
+++ b/src/templates/clientes/create.html
@@ -6,71 +6,168 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cliente</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lilita+One&display=swap" rel="stylesheet">
     <style>
+        /* General body styling */
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: url("{{ url_for('static', filename='fondoUbm.jpg') }}") no-repeat center center fixed;
+            background-size: cover;
+            color: #333;
+            /* Neutral color for text */
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .titulo {
+            font-family: "bebas neue", serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        /* Header styling */
+        header {
+            width: 100%;
+            background-color: rgba(61, 61, 61, 0.5);
+            /* Semi-transparent background for readability */
+            color: #fff;
+            padding-top: 15px;
+            padding-right: 15px;
+            display: flex;
+            justify-content: flex-end;
+            font-size: 1.5em;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* Subtle shadow for depth */
+            position: relative;
+        }
+
+        .header-logo {
+            position: absolute;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+            width: 60px;
+        }
+
+        /* Form container styling */
         .form-container {
             max-width: 600px;
-            margin: 0 auto;
-            margin-top: 20px;
+            margin: 50px auto;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Button styling */
+        .btn-secondary {
+            background-color: rgb(61, 61, 61);
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .btn-secondary:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+
+        .card-title {
+            font-family: "Audiowide", serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 40px;
+        }
+
+        .label {
+            font-family: "Audiowide", serif;
+            font-weight: 400;
+            font-style: normal;
         }
     </style>
 </head>
 
 <body>
-    {% include 'header.html' %}
+    <!-- Header Section with Logo -->
+    <header>
+        <a href="{{ url_for('index') }}">
+            <img src="{{ url_for('static', filename='logo-final-02.png') }}" alt="Logo de la Empresa"
+                class="header-logo">
+        </a>
+        <p class="titulo">
+            UBM - Viajes y Turismo
+        </p>
+    </header>
+
     <div class="container form-container">
-        <div class="card">
+        <div class="card border-0 shadow">
             <div class="card-body">
-                <h5 class="card-title text-center">Cargar Pasajero</h5>
+                <h5 class="card-title text-center mb-4">Cargar Pasajero</h5>
                 <form method="POST" enctype="multipart/form-data" action="{{ url_for('store') }}">
                     <div class="form-group">
-                        <label for="txtnombre" class="small">Nombre: </label>
+                        <label for="txtnombre" class="small label">Nombre: </label>
                         <input type="text" class="form-control form-control-sm" name="txtnombre" id="txtnombre"
                             required>
                     </div>
                     <div class="form-group">
-                        <label for="txtapellido" class="small">Apellido: </label>
+                        <label for="txtapellido" class="small label">Apellido: </label>
                         <input type="text" class="form-control form-control-sm" name="txtapellido" id="txtapellido"
                             required>
                     </div>
                     <div class="form-group">
-                        <label for="txtfotoP" class="small">PASAPORTE ARGENTINO: </label>
+                        <label for="txtfotoP" class="small label">PASAPORTE ARGENTINO: </label>
                         <input type="file" class="form-control-file small" name="txtfotoP" id="txtfotoP">
                     </div>
                     <div class="form-group">
-                        <label for="txtfotoP2" class="small">PASAPORTE EUROPEO: </label>
+                        <label for="txtfotoP2" class="small label">PASAPORTE EUROPEO: </label>
                         <input type="file" class="form-control-file small" name="txtfotoP2" id="txtfotoP2">
                     </div>
                     <div class="form-group">
-                        <label for="txtfotoV" class="small">VISA: </label>
+                        <label for="txtfotoV" class="small label">VISA: </label>
                         <input type="file" class="form-control-file small" name="txtfotoV" id="txtfotoV">
                     </div>
                     <div class="form-group">
-                        <label for="txtfotoD" class="small">DNI: </label>
+                        <label for="txtfotoD" class="small label">DNI: </label>
                         <input type="file" class="form-control-file small" name="txtfotoD" id="txtfotoD">
                     </div>
-                    <div class="form-group d-flex flex-direction-row justify-content-center gap-4">
-                        <label for="txtcuil" class="small">CUIL: </label>
-                        <input type="text" class="form-control form-control-sm" name="txtcuil" id="txtcuil" >
+                    <div class="form-group">
+                        <label for="txtcuil" class="small label">CUIL: </label>
+                        <input type="text" class="form-control form-control-sm" name="txtcuil" id="txtcuil">
                     </div>
                     <div class="form-group">
-                        <label for="txtnumfrecuente1" class="small">Número Frecuente 1: </label>
+                        <label for="txtnumfrecuente1" class="small label">Número Frecuente 1: </label>
                         <input type="text" class="form-control form-control-sm" name="txtnumfrecuente1"
                             id="txtnumfrecuente1">
                     </div>
                     <div class="form-group">
-                        <label for="txtnumfrecuente2" class="small">Número Frecuente 2: </label>
+                        <label for="txtnumfrecuente2" class="small label">Número Frecuente 2: </label>
                         <input type="text" class="form-control form-control-sm" name="txtnumfrecuente2"
                             id="txtnumfrecuente2">
                     </div>
                     <div class="form-group">
-                        <label for="txtnumfrecuente3" class="small">Número Frecuente 3: </label>
+                        <label for="txtnumfrecuente3" class="small label">Número Frecuente 3: </label>
                         <input type="text" class="form-control form-control-sm" name="txtnumfrecuente3"
                             id="txtnumfrecuente3">
                     </div>
 
-                    <button type="submit" class="btn btn-secondary btn-sm btn-block">Agregar Cliente</button>
+                    <button type="submit" class="btn btn-secondary btn-sm btn-block label">Agregar Cliente</button>
                 </form>
-
             </div>
         </div>
     </div>
