--- a/src/templates/clientes/index.html
+++ b/src/templates/clientes/index.html
@@ -22,11 +22,9 @@
     <style>
         /* General body styling */
         body {
-
             background: url("{{ url_for('static', filename='fondoUbm.jpg') }}") no-repeat center center fixed;
             background-size: cover;
             color: #333;
-            /* Neutral color for text */
             margin: 0;
             padding: 0;
             min-height: 100vh;
@@ -157,6 +155,7 @@
                 <button class="btn btn-custom" onclick="window.location.href='/clientes/'">Pasajeros</button>
                 <button class="btn btn-custom" onclick="window.location.href='/clientes/'">Buscar Pasajero</button>
                 <button class="btn btn-custom" onclick="window.location.href='/create/'">Alta de Pasajero</button>
+                <button class="btn btn-custom" onclick="window.location.href='/mass_email'">Envio de Correos</button>
             </div>
         </div>
     </div>
