--- a/src/templates/mass_email/mass_email.html
+++ b/src/templates/mass_email/mass_email.html
@@ -44,7 +44,7 @@
             </div>
             <div class="mb-3">
                 <label for="body" class="form-label">Cuerpo del Correo</label>
-                <textarea class="form-control etiqueta" id="body" name="body" rows="4" required></textarea>
+                <textarea class="form-control etiqueta" id="body" name="body" rows="4"></textarea>
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Imagen Promocional</label>
