--- a/src/templates/mass_email/mass_email.html
+++ b/src/templates/mass_email/mass_email.html
@@ -43,7 +43,7 @@
                 <input type="text" class="form-control etiqueta" id="subject" name="subject" required>
             </div>
             <div class="mb-3">
-                <label for="body" class="form-label">Cuerpo del Correo</label>
+                <label for="body" class="form-label">Pie del correo</label>
                 <textarea class="form-control etiqueta" id="body" name="body" rows="4"></textarea>
             </div>
             <div class="mb-3">
